# otus_python_basic

./: .gitignor  README.md  requirements-dev.txt  requirements.txt
Django_firs_homework/: README.md  db.sqlite3  log.txt  pyproject.toml
Django_firs_homework/config/: settings.py  urls.py
Django_firs_homework/shop_app/: models.py  urls.py  views.py
Django_second_homework/: README.md  db.sqlite3  pyproject.toml
Django_second_homework/shop_app/: admin.py  forms.py  models.py  urls.py  views.py
Django_third_homework/: README.md  db.sqlite3  pyproject.toml
Django_third_homework/shop_app/: forms.py  models.py  urls.py  views.py
Django_third_homework/shop_app/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_price.py
Django_third_homework/shop_app/templates/shop_app/: add_category.html  add_product.html  base.html  category_delete.html  category_include.html  category_list.html  edit_product.html  menu.html  product_delete.html  products_detail.html
Django_third_homework/shop_app/tests/: conftest.py  test_form.py  test_form_mock.py  test_get.py  test_model.py  test_post.py  test_views.py
homework_01/: README.md  main.py  phone_book.txt
homework_03/: .dockerignore  Dockerfile  README.md  main.py  requirements.txt
homework_03/templates/: base.html  index.html
homework_03/views/: views.py
homework_05/: README.md  app.py  main.py  requirements.txt
homework_05/app/: api.py  main.py
homework_05/templates/: about.html  cars.html  index.html
homework_05/views/: views.py
homework_5/: app.py
homework_5/templates/: base.html  (+1 more)
(+11 files in other folders)
